--- a/.editorconfig
+++ b/.editorconfig
@@ -73,6 +73,9 @@ csharp_style_var_for_built_in_types = false:silent
 csharp_style_var_when_type_is_apparent = false:silent
 csharp_style_var_elsewhere = false:silent
 
+# CA1815: Override equals and operator equals on value types
+dotnet_diagnostic.CA1815.severity = none
+
 [*.{cs,vb}]
 #### Naming styles ####
 
